Tune UI. Resource manager (ability to do i18n later).

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -1,152 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"/>
     <title>BPE</title>
-    <link rel="stylesheet" type="text/css" href="style/material.css" />
-    <link rel="stylesheet" type="text/css" href="style/bpe.css" />
-    <link rel="stylesheet" type="text/css" href="style/specscii.css" />
+    <link rel="stylesheet" type="text/css" href="style/material.css"/>
+    <link rel="stylesheet" type="text/css" href="style/bpe.css"/>
+    <link rel="stylesheet" type="text/css" href="style/specscii.css"/>
     <script type="application/javascript" src="app.js"></script>
 </head>
 <body>
-    <div class="loading js-loading"></div>
-    <div class="container hidden js-container">
-        <div class="drawing">
-            <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
-            <canvas width="320" height="256" class="drawing__areas js-areas"></canvas>
-        </div>
-        <div class="panel panel--palette">
-            <div class="panel__pane">
-                <div class="tool js-palette-color">
-                    <div class="tool__color"></div>
-                    <img src="drawable/palette__color.svg" alt="Select color" class="tool__icon" />
-                </div>
-                <div class="tool js-palette-paper">
-                    <div class="tool__color_paper"></div>
-                    <img src="drawable/palette__paper.svg" alt="Select paper" class="tool__icon" />
-                </div>
-                <div class="tool js-palette-ink">
-                    <div class="tool__color_ink"></div>
-                    <img src="drawable/palette__ink.svg" alt="Select ink" class="tool__icon" />
-                </div>
-                <div class="tool js-palette-bright">
-                    <div class="tool__light"></div>
-                    <img src="drawable/palette__bright.svg" alt="Select bright" class="tool__icon" />
-                </div>
-                <div class="tool js-palette-flash">
-                    <div class="tool__light"></div>
-                    <img src="drawable/palette__flash.svg" alt="Select flash" class="tool__icon" />
-                </div>
-                <div class="tool js-palette-char">
-                    <div class="tool__char"></div>
-                    <img src="drawable/palette__char.svg" alt="Select character" class="tool" />
-                </div>
+<div class="loading js-loading"></div>
+<div class="container hidden js-container">
+    <div class="drawing">
+        <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
+        <canvas width="320" height="256" class="drawing__areas js-areas"></canvas>
+    </div>
+    <div class="panel panel--palette">
+        <div class="panel__pane">
+            <div class="tool js-palette-color" bpe-title="palette_select_color">
+                <div class="tool__color js-palette-color-indicator"></div>
+                <img src="drawable/palette__color.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="panel__pane">
-                <div class="tool js-selection-cut">
-                    <img src="drawable/selection__cut.svg" alt="Cut" class="tool__icon" />
-                </div>
-                <div class="tool js-selection-copy">
-                    <img src="drawable/selection__copy.svg" alt="Copy" class="tool__icon" />
-                </div>
-                <div class="tool js-layers">
-                    <img src="drawable/layers.svg" alt="Layers" class="tool__icon" />
-                </div>
+            <div class="tool js-palette-paper" bpe-title="palette_select_paper">
+                <div class="tool__color_paper js-palette-paper-indicator"></div>
+                <img src="drawable/palette__paper.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-palette-ink" bpe-title="palette_select_ink">
+                <div class="tool__color_ink js-palette-ink-indicator"></div>
+                <img src="drawable/palette__ink.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-palette-bright" bpe-title="palette_select_bright">
+                <div class="tool__light js-palette-bright-indicator"></div>
+                <img src="drawable/palette__bright.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-palette-flash" bpe-title="palette_select_flash">
+                <div class="tool__light js-palette-flash-indicator"></div>
+                <img src="drawable/palette__flash.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-palette-char" bpe-title="palette_select_character">
+                <div class="tool__char js-palette-char-indicator"></div>
+                <img src="drawable/palette__char.svg" alt="" class="tool"/>
             </div>
         </div>
-        <div class="panel panel--toolbox">
-            <div class="panel__pane">
-                <div class="tool js-toolbox-paint">
-                    <img src="drawable/tool__paint.svg" alt="Paint" class="tool__icon" />
-                </div>
-                <div class="tool tool__shape js-toolbox-shape">
-                    <img src="drawable/shape__point.svg" alt="Point" class="tool__icon tool__icon--shape__point" />
-                    <img src="drawable/shape__line.svg" alt="Line" class="tool__icon tool__icon--shape__line" />
-                    <img src="drawable/shape__stroke_box.svg" alt="Stroke box" class="tool__icon tool__icon--shape__stroke_box" />
-                    <img src="drawable/shape__fill_box.svg" alt="Fill box" class="tool__icon tool__icon--shape__fill_box" />
-                </div>
-                <div class="tool js-toolbox-erase">
-                    <img src="drawable/tool__erase.svg" alt="Erase" class="tool__icon" />
-                </div>
-                <div class="tool js-toolbox-select">
-                    <img src="drawable/tool__select.svg" alt="Select" class="tool__icon" />
-                </div>
-                <div class="tool js-toolbox-pick-color">
-                    <img src="drawable/tool__pick_color.svg" alt="Pick color" class="tool__icon" />
-                </div>
+        <div class="panel__pane">
+            <div class="tool js-selection-cut" bpe-title="selection_cut">
+                <img src="drawable/selection__cut.svg" alt="" class="tool__icon"/>
             </div>
-            <div class="panel__pane">
-                <div class="tool js-toolbox-paste">
-                    <img src="drawable/toolbox__paste.svg" alt="Paste" class="tool__icon" />
-                </div>
-                <div class="tool js-toolbox-undo">
-                    <img src="drawable/toolbox__undo.svg" alt="Undo" class="tool__icon" />
-                </div>
-                <div class="tool js-toolbox-redo">
-                    <img src="drawable/toolbox__redo.svg" alt="Redo" class="tool__icon" />
-                </div>
-                <div class="tool js-menu">
-                    <img src="drawable/menu.svg" alt="Menu" class="tool__icon" />
-                </div>
+            <div class="tool js-selection-copy" bpe-title="selection_copy">
+                <img src="drawable/selection__copy.svg" alt="" class="tool__icon"/>
             </div>
-        </div>
-        <div class="subpanel subpanel--palette js-colors-panel"></div>
-        <div class="subpanel subpanel--palette js-lights-panel"></div>
-        <div class="subpanel subpanel--palette subpanel--palette_chars js-chars-panel"></div>
-        <div class="layers js-layers-panel">
-            <div class="layers__items"></div>
-            <div class="layers__toolbar">
-                <div class="panel__pane">
-                    <div class="tool tool--md js-layers-create">
-                        <img src="drawable/layer__create.svg" alt="Create layer" class="tool__icon" />
-                    </div>
-                    <div class="tool tool--md js-layers-merge">
-                        <img src="drawable/layer__merge.svg" alt="Merge layer" class="tool__icon" />
-                    </div>
-                    <div class="tool tool--md js-layers-convert">
-                        <img src="drawable/layer__convert.svg" alt="Convert layer" class="tool__icon" />
-                    </div>
-                    <div class="tool tool--md js-layers-delete">
-                        <img src="drawable/layer__delete.svg" alt="Delete layer" class="tool__icon" />
-                    </div>
-                </div>
-                <div class="panel__pane">
-                    <div class="tool tool--md js-layers-move-up">
-                        <img src="drawable/layer__move_up.svg" alt="Move layer up" class="tool__icon" />
-                    </div>
-                    <div class="tool tool--md js-layers-move-down">
-                        <img src="drawable/layer__move_down.svg" alt="Move layer down" class="tool__icon" />
-                    </div>
-                </div>
-            </div>
-            <div class="layers__toolbar layers__toolbar--types"></div>
-        </div>
-        <div class="subpanel subpanel--tools js-shapes-panel">
-            <div class="panel__pane">
-                <div class="tool js-shape-point">
-                    <img src="drawable/shape__point.svg" alt="Point" class="tool__icon tool__icon--shape__point" />
-                </div>
-                <div class="tool js-shape-line">
-                    <img src="drawable/shape__line.svg" alt="Line" class="tool__icon tool__icon--shape__line" />
-                </div>
-                <div class="tool js-shape-stroke-box">
-                    <img src="drawable/shape__stroke_box.svg" alt="Stroke box" class="tool__icon tool__icon--shape__stroke_box" />
-                </div>
-                <div class="tool js-shape-fill-box">
-                    <img src="drawable/shape__fill_box.svg" alt="Fill box" class="tool__icon tool__icon--shape__fill_box" />
-                </div>
-            </div>
-        </div>
-        <div class="subpanel subpanel--menu js-menu-panel">
-            <div class="menu__item">
-                <div class="menu__item-content">Load</div>
-                <input type="file" class="menu__item-load js-menu-load" accept=".bpe" />
-            </div>
-            <div class="menu__item js-menu-save">
-                <div class="menu__item-content">Save</div>
+            <div class="tool js-layers" bpe-title="layers">
+                <img src="drawable/layers.svg" alt="" class="tool__icon"/>
             </div>
         </div>
     </div>
+    <div class="panel panel--toolbox">
+        <div class="panel__pane">
+            <div class="tool js-toolbox-paint" bpe-title="tool_paint">
+                <img src="drawable/tool__paint.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool tool__shape js-toolbox-shape">
+                <img src="drawable/shape__point.svg" bpe-alt="shape_point" alt="" class="tool__icon tool__icon--shape__point"/>
+                <img src="drawable/shape__line.svg" bpe-alt="shape_line" alt="" class="tool__icon tool__icon--shape__line"/>
+                <img src="drawable/shape__stroke_box.svg" bpe-alt="shape_stroke_box" alt="" class="tool__icon tool__icon--shape__stroke_box"/>
+                <img src="drawable/shape__fill_box.svg" bpe-alt="shape_fill_box" alt="" class="tool__icon tool__icon--shape__fill_box"/>
+            </div>
+            <div class="tool js-toolbox-erase" bpe-title="tool_erase">
+                <img src="drawable/tool__erase.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-toolbox-select" bpe-title="tool_select">
+                <img src="drawable/tool__select.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-toolbox-pick-color" bpe-title="tool_pick_color">
+                <img src="drawable/tool__pick_color.svg" alt="" class="tool__icon"/>
+            </div>
+        </div>
+        <div class="panel__pane">
+            <div class="tool js-toolbox-paste" bpe-title="toolbox_paste">
+                <img src="drawable/toolbox__paste.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-toolbox-undo" bpe-title="toolbox_undo">
+                <img src="drawable/toolbox__undo.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-toolbox-redo" bpe-title="toolbox_redo">
+                <img src="drawable/toolbox__redo.svg" alt="" class="tool__icon"/>
+            </div>
+            <div class="tool js-menu" bpe-title="menu">
+                <img src="drawable/menu.svg" alt="" class="tool__icon"/>
+            </div>
+        </div>
+    </div>
+    <div class="subpanel subpanel--palette js-colors-panel"></div>
+    <div class="subpanel subpanel--palette js-lights-panel"></div>
+    <div class="subpanel subpanel--palette subpanel--palette_chars js-chars-panel"></div>
+    <div class="layers js-layers-panel">
+        <div class="layers__items js-layers-items"></div>
+        <div class="layers__toolbar js-layers-toolbar-primary">
+            <div class="panel__pane">
+                <div class="tool tool--md js-layers-create-primary" bpe-title="layers_create">
+                    <img src="drawable/layer__create.svg" alt="" class="tool__icon"/>
+                </div>
+                <div class="tool tool--md js-layers-merge" bpe-title="layers_merge">
+                    <img src="drawable/layer__merge.svg" alt="" class="tool__icon"/>
+                </div>
+                <div class="tool tool--md js-layers-convert" bpe-title="layers_convert">
+                    <img src="drawable/layer__convert.svg" alt="" class="tool__icon"/>
+                </div>
+                <div class="tool tool--md js-layers-delete" bpe-title="layers_delete">
+                    <img src="drawable/layer__delete.svg" alt="" class="tool__icon"/>
+                </div>
+            </div>
+            <div class="panel__pane">
+                <div class="tool tool--md js-layers-move-up" bpe-title="layers_move_up">
+                    <img src="drawable/layer__move_up.svg" alt="" class="tool__icon"/>
+                </div>
+                <div class="tool tool--md js-layers-move-down" bpe-title="layers_move_down">
+                    <img src="drawable/layer__move_down.svg" alt="" class="tool__icon"/>
+                </div>
+            </div>
+        </div>
+        <div class="layers__toolbar layers__toolbar--types js-layers-toolbar-types">
+            <div class="panel__pane">
+                <div class="tool tool--md js-layers-create-types" bpe-title="layers_undo_create">
+                    <img src="drawable/layer__create.svg" alt="" class="tool__icon"/>
+                </div>
+            </div>
+            <div class="panel__pane js-layers-types"></div>
+        </div>
+    </div>
+    <div class="subpanel subpanel--tools js-shapes-panel">
+        <div class="panel__pane">
+            <div class="tool js-shape-point" bpe-title="shape_point">
+                <img src="drawable/shape__point.svg" alt="" class="tool__icon tool__icon--shape__point"/>
+            </div>
+            <div class="tool js-shape-line" bpe-title="shape_line">
+                <img src="drawable/shape__line.svg" alt="" class="tool__icon tool__icon--shape__line"/>
+            </div>
+            <div class="tool js-shape-stroke-box" bpe-title="shape_stroke_box">
+                <img src="drawable/shape__stroke_box.svg" alt="" class="tool__icon tool__icon--shape__stroke_box"/>
+            </div>
+            <div class="tool js-shape-fill-box" bpe-title="shape_fill_box">
+                <img src="drawable/shape__fill_box.svg" alt="" class="tool__icon tool__icon--shape__fill_box"/>
+            </div>
+        </div>
+    </div>
+    <div class="subpanel subpanel--menu js-menu-panel">
+        <div class="menu__item">
+            <div class="menu__item-content" bpe-text="menu_load"></div>
+            <input type="file" class="menu__item-load js-menu-load" accept=".bpe"/>
+        </div>
+        <div class="menu__item js-menu-save">
+            <div class="menu__item-content" bpe-text="menu_save"></div>
+        </div>
+        <div class="menu__item js-menu-export">
+            <div class="menu__item-content" bpe-text="menu_export">Export</div>
+        </div>
+    </div>
+    <div class="alert js-alert hidden">
+        <div class="alert__background"></div>
+        <div class="alert__content js-alert-content"></div>
+    </div>
+</div>
 </body>
 </html>
