Support for flash.

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -61,10 +61,10 @@
                 <img src="drawable/tool__paint.svg" alt="" class="tool__icon"/>
             </div>
             <div class="tool tool__shape js-toolbox-shape">
-                <img src="drawable/shape__point.svg" bpe-alt="shape_point" alt="" class="tool__icon tool__icon--shape__point"/>
-                <img src="drawable/shape__line.svg" bpe-alt="shape_line" alt="" class="tool__icon tool__icon--shape__line"/>
-                <img src="drawable/shape__stroke_box.svg" bpe-alt="shape_stroke_box" alt="" class="tool__icon tool__icon--shape__stroke_box"/>
-                <img src="drawable/shape__fill_box.svg" bpe-alt="shape_fill_box" alt="" class="tool__icon tool__icon--shape__fill_box"/>
+                <img src="drawable/shape__point.svg" alt="" class="tool__icon tool__icon--shape__point"/>
+                <img src="drawable/shape__line.svg" alt="" class="tool__icon tool__icon--shape__line"/>
+                <img src="drawable/shape__stroke_box.svg" alt="" class="tool__icon tool__icon--shape__stroke_box"/>
+                <img src="drawable/shape__fill_box.svg" alt="" class="tool__icon tool__icon--shape__fill_box"/>
             </div>
             <div class="tool js-toolbox-erase" bpe-title="tool_erase">
                 <img src="drawable/tool__erase.svg" alt="" class="tool__icon"/>
