--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -62,8 +62,8 @@
                 <img src="drawable/shape__line.svg" alt="" class="tool__icon tool__icon--shape__line"/>
                 <img src="drawable/shape__stroke_box.svg" alt="" class="tool__icon tool__icon--shape__stroke_box"/>
                 <img src="drawable/shape__fill_box.svg" alt="" class="tool__icon tool__icon--shape__fill_box"/>
-                <img src="drawable/shape__stroke_oval.svg" alt="" class="tool__icon tool__icon--shape__stroke_oval"/>
-                <img src="drawable/shape__fill_oval.svg" alt="" class="tool__icon tool__icon--shape__fill_oval"/>
+                <img src="drawable/shape__stroke_ellipse.svg" alt="" class="tool__icon tool__icon--shape__stroke_ellipse"/>
+                <img src="drawable/shape__fill_ellipse.svg" alt="" class="tool__icon tool__icon--shape__fill_ellipse"/>
             </div>
             <div class="tool js-toolbox-erase" bpe-title="tool_erase">
                 <img src="drawable/tool__erase.svg" alt="" class="tool__icon"/>
@@ -167,11 +167,11 @@
             <div class="tool js-shape-fill-box" bpe-title="shape_fill_box">
                 <img src="drawable/shape__fill_box.svg" alt="" class="tool__icon tool__icon--shape__fill_box"/>
             </div>
-            <div class="tool js-shape-stroke-oval" bpe-title="shape_stroke_oval">
-                <img src="drawable/shape__stroke_oval.svg" alt="" class="tool__icon tool__icon--shape__stroke_oval"/>
+            <div class="tool js-shape-stroke-ellipse" bpe-title="shape_stroke_ellipse">
+                <img src="drawable/shape__stroke_ellipse.svg" alt="" class="tool__icon tool__icon--shape__stroke_ellipse"/>
             </div>
-            <div class="tool js-shape-fill-oval" bpe-title="shape_fill_oval">
-                <img src="drawable/shape__fill_oval.svg" alt="" class="tool__icon tool__icon--shape__fill_oval"/>
+            <div class="tool js-shape-fill-ellipse" bpe-title="shape_fill_ellipse">
+                <img src="drawable/shape__fill_ellipse.svg" alt="" class="tool__icon tool__icon--shape__fill_ellipse"/>
             </div>
         </div>
     </div>
