Painting mode added

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -47,6 +47,10 @@
             <div class="tool js-selection-menu" bpe-title="selection_menu">
                 <img src="drawable/menu__secondary.svg" alt="" class="tool__icon"/>
             </div>
+            <div class="tool tool__mode js-painting-mode">
+                <img src="drawable/mode__edge.svg" alt="" class="tool__icon tool__icon--mode__edge"/>
+                <img src="drawable/mode__center.svg" alt="" class="tool__icon tool__icon--mode__center"/>
+            </div>
             <div class="tool js-layers" bpe-title="layers">
                 <img src="drawable/layers.svg" alt="" class="tool__icon"/>
             </div>
@@ -90,6 +94,7 @@
             </div>
         </div>
     </div>
+    <div class="informer js-informer"></div>
     <div class="subpanel subpanel--palette js-colors-panel"></div>
     <div class="subpanel subpanel--palette js-lights-panel"></div>
     <div class="subpanel subpanel--palette subpanel--palette_chars js-chars-panel"></div>
