Export to SCR and other improvements

--- a/app/src/jsMain/resources/index.html
+++ b/app/src/jsMain/resources/index.html
@@ -37,9 +37,9 @@
 <body>
 <div class="loading js-loading"></div>
 <div class="container hidden js-container">
-    <div class="drawing">
-        <canvas width="320" height="256" class="drawing__sheet js-sheet"></canvas>
-        <canvas width="320" height="256" class="drawing__areas js-areas"></canvas>
+    <div class="drawing js-drawing">
+        <canvas width="320" height="256" class="drawing__sheet js-drawing-sheet"></canvas>
+        <canvas width="320" height="256" class="drawing__areas js-drawing-areas"></canvas>
     </div>
     <div class="panel panel--palette">
         <div class="panel__pane">
